--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
           <a href="https://github.com/marta1999-spec" target="_blank"
             >Marta Aramu</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          and is on
+          <a
+            href="https://github.com/marta1999-spec/weather-app"
+            target="_blank"
+            >GitHub</a
+          >
+          and hosted on
+          <a href="https://www.netlify.com/" target="_blank">Netlify</a>
         </p>
       </footer>
     </div>
