--- a/index.html
+++ b/index.html
@@ -50,8 +50,17 @@
           <a href="https://github.com/marta1999-spec" target="_blank"
             >Marta Aramu</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          and is
+          <a
+            href="https://github.com/marta1999-spec/weather-app"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://www.netlify.com/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
