--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <form id="search-form">
           <input
             type="search"
-            placeholder="Enter a city.."
+            placeholder="Enter a city"
             required
             class="search-input"
             id="search-input"
@@ -50,17 +50,15 @@
           <a href="https://github.com/marta1999-spec" target="_blank"
             >Marta Aramu</a
           >
-          and is
+          and is on
           <a
             href="https://github.com/marta1999-spec/weather-app"
             target="_blank"
           >
-            on GitHub</a
+            GitHub</a
           >
-          and
-          <a href="https://www.netlify.com/" target="_blank"
-            >hosted on Netlify</a
-          >
+          and hosted on
+          <a href="https://www.netlify.com/" target="_blank"> Netlify</a>
         </p>
       </footer>
     </div>
